/**
 * Base entity interface.
 */
export interface BaseEntity {
  id: number;
}
