/**
 * Abstract API class.
 */
export abstract class BaseApi {
  // No methods defined; children classes will implement specific methods.
}
