/**
 * Abstract resource interface.
 */
export interface BaseResource {
  id: number;
}

/**
 * Abstract response interface.
 */
export interface BaseResponse {
}
